test/files/neg/macro-blackbox-extractor/Test_2.scala
object Test extends App {
  42 match {
    case Extractor(x) => println(x)
  }
}
